# OS-labs

./: CMakeLists.txt  README.md
kp/: CMakeLists.txt  main.cpp
kp/doc/: report.docx
kp/include/: allocator_list.h  allocator_mkk.h
kp/src/: allocator_list.cpp  allocator_mkk.cpp
lab1/doc/: report.docx
lab2/: CMakeLists.txt  main.c  test.txt
lab2/doc/: report.docx
lab2/include/: parent.h  utils.h
lab2/src/: child.c  parent.c  test.txt  utils.c
lab3/: CMakeLists.txt  main.c
lab3/doc/: report.docx
lab3/include/: general.h  utils.h
lab3/src/: general.c  main.c  utils.c
lab4/: CMakeLists.txt
lab4/doc/: report .docx
lab4/include/: utils.h
lab4/src/: child.c  parent.c  utils.c
lab5/: CMakeLists.txt  Makefile  main1.c  main2.c
lab5/doc/: report.docx
lab5/include/: functions.h  library1.h
lab5/src/: functions1.c  functions2.c
lab6-8/: CMakeLists.txt
lab6-8/doc/: report.docx
lab6-8/include/: tree.h
lab6-8/src/: client.cpp  main.cpp  tree.cpp
tests/: CMakeLists.txt  lab2_test.cpp  lab3_test.cpp  lab4_test.cpp  output.txt
